# a32nx

./: .gitignore  package-lock.json  package.json
.github/workflows/: pr.yml
A32NX/ModelBehaviorDefs/A32NX/: Airbus.xml
A32NX/ModelBehaviorDefs/A32NX/Interior/: A32NX_Interior_Includes.xml
A32NX/SimObjects/AirPlanes/Asobo_A320_NEO/: approach.FLT  apron.FLT  cruise.FLT  final.FLT  flight_model.cfg  runway.FLT  systems.cfg  taxi.flt
A32NX/html_ui/Pages/A32NX_Utils/: NXFlightGuidance.js
asobo-aircraft-a320-neo/: layout.json  manifest.json
asobo-vcockpits-instruments-a320-neo/: layout.json  manifest.json
asobo-vcockpits-instruments-airliners/: layout.json  manifest.json
docs/: README.md  a320-simvars.md
fs-base-aircraft-common/: layout.json  manifest.json
scripts/: build.sh
src/ap/: build.sh
src/ap/src/: AutopilotInterface.cpp  AutopilotInterface.h  main.cpp
src/ap/src/interface/: SimConnectDataAutopilot.h  SimConnectInterfaceAutopilot.cpp  SimConnectInterfaceAutopilot.h
src/ap/src/model/: Autopilot.cpp  Autopilot.h  Autopilot_data.cpp  Autopilot_private.h  Autopilot_types.h
src/ap/src/models/: ap_alt_acq.cpp  ap_hpath.h  (+28 more)
src/autothrottle/: Cargo.toml
src/autothrottle/.cargo/: config  config.toml
src/autothrottle/src/: athr.rs  bin.rs  lib.rs  pid.rs  rl.rs
src/fbw/: build.sh
src/fbw/src/: FlightDataRecorder.cpp  FlightDataRecorder.h  FlyByWireInterface.cpp  FlyByWireInterface.h  InterpolatingLookupTable.h
src/fdr2csv/: CMakeLists.txt  build.cmd
src/fdr2csv/src/: FlightDataRecorderConverter.cpp  FlightDataRecorderConverter.h  main.cpp
(+35 files in other folders)
